Prevent search tag from overflowing

--- a/src/components/searchTags/style.less
+++ b/src/components/searchTags/style.less
@@ -28,6 +28,10 @@
   padding: 4px 8px;
   cursor: pointer;
   transition: all 0.2s;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 95px;
+  white-space: nowrap;
 
   &:not(:last-of-type) {
     margin-right: 12px;
